feat(devops): added github actions workflow

--- a/apps/api/templates/emails/email-verification.html
+++ b/apps/api/templates/emails/email-verification.html
@@ -81,6 +81,31 @@
               style="color:rgb(107,114,128);font-size:0.75rem;line-height:1rem;margin-bottom:16px;margin-top:16px">
               If you didn&#x27;t request this, you can ignore this email.
             </p>
+            <table
+              align="center"
+              width="100%"
+              border="0"
+              cellpadding="0"
+              cellspacing="0"
+              role="presentation"
+              style="margin-top:2rem;text-align:center">
+              <tbody>
+                <tr>
+                  <td>
+                    <p
+                      style="color:rgb(107,114,128);font-size:0.75rem;line-height:1rem;margin-bottom:16px;margin-top:16px">
+                      Copyright
+                      <!-- -->2025<!-- -->
+                      Go Kickstart. All rights reserved.
+                    </p>
+                    <p
+                      style="color:rgb(107,114,128);font-size:0.75rem;line-height:1rem;margin-bottom:16px;margin-top:16px">
+                      123 Project Street, Suite 100, San Francisco, CA 94103
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </td>
         </tr>
       </tbody>
