chore: setup monorepo with turborepo

--- a/apps/cli/templates/monorepo/README.md.tmpl
+++ b/apps/cli/templates/monorepo/README.md.tmpl
@@ -1,7 +1,7 @@
 # {{PROJECT_NAME}}
 
-A monorepo for a Go API and a Vite + React web app with shared TypeScript packages, managed with Turborepo and Bun workspaces. visit the
-[repository](https://{{MODULE_PATH}}) for more details.
+A monorepo for a Go API and a Vite + React web app with shared TypeScript packages, managed with Turborepo and Bun workspaces. scaffolded with **go-kickstart** visit the
+[repository](https://github.com/jeheskielSunloy77/go-kickstart) for more details.
 
 ## Repository layout
 
